--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,6 @@
-version: '3'
+# This is a Docker Compose file that defines the services and their configurations for a multi-container application.
+
+version: '3.8'
 services:
   postgres-db:
     image: postgres:latest
